--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
 MONGODB_URL=mongodb://localhost:27017/SHOP
+TWILIO_ACCOUNT_SID=AC43da5b02bdd66e350a9e04f7edd5c25f
+TWILIO_AUTH_TOKEN=03e5e3117ebb696e3c13ede77ab70961
+TWILIO_PHONE_NUMBER=+12765660911
