--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "twilio": "^5.10.4"
   }
 }
